becpg-plm/becpg-plm-share/src/main/assembly/web/components/entity-data-lists/product-notifications.css
/* ... */
.rclFilterSelected .req-filter.tag {
	background-color: #ddd
}

div.dataTypeList span.req-all-all {
	margin: 0 5px 5px
}


div.dataTypeList .title {
	margin-bottom: 5px;
	color: #004254;
	font-weight: bold
}




.ctrlSumPreview .dataTypeList .rclFilterElt {
	margin-top: 10px;
	display: flex
}

.ctrlSumPreview li.title {
	text-align: center;
	color: #004254;
	font-weight: bold
}

.product-notifications .title a.notificationsReqType7 {
	font-size: 11px;
	color: #004254;
	text-decoration-color: #ff642d
}

.dataTypeList .rclFilterSelected {
	text-decoration: underline 2px
}

.dataTypeList span .rclFilterSelected {
	padding: 1px
}

.rclFilterElt a.notificationsReqType7, .rclFilterElt a.notificationsReqType7:hover
{
	text-decoration-color: #ff642d
}

.rclFilterElt ul {
	display: inline;
	height: 100px
}

.rclFilterElt > div {
	column-count: 3;
	column-width: 10rem; 
	padding: 1px;
	font-size: 13px
}


div .div-regulatorycodes ul li {
	display: flex
}

div .div-regulatorycodes ul li span {
	display: flex;
	background-color: #d3d3d3
}


#scoresDiv {
	margin: 0 10px 5px;
	overflow: auto;
	margin-left: 4px;
	margin-right: 4px
}

#scoresDiv>ul {
	padding: .2px;
	margin-right: 20px;
	float: left;
	text-align: center
}

#scoreLi span {
	display: inherit;
	text-align: center
}


.product-notifications .notifications-list .rclReq-details .icon {
	float: left;
	width: 5%
}

.product-notifications .notifications-list .rclReq-details .rclReq-title
	{
	float: right;
	width: 95%;
	color: #000
}

.product-notifications .notifications-list .rclReq-details .rclReq-content
	{
	clear: both;
	list-style-type: disc;
	margin-left: 6%;
	padding: 2px;
	column-count: 2
}

.product-notifications .notifications-list .rclReq-details .rclReq-content ul li
	{
	list-style: none;
	min-height: 18px
}

.product-notifications .notifications-list .rclReq-details .rclReq-content ol li
	{
	list-style-type: decimal
}

.product-notifications .notifications-list td {
	background-color: #f8f8f8;
	padding: 4px;
	border: 1px solid #ccc !important
}

.product-notifications .notifications-list .datagrid-bar .new-row,
	.product-notifications .datagrid .datagrid-bar .selected-items,
	.product-notifications .datagrid td.yui-dt-first,
	.product-notifications .datagrid td.yui-dt-last {
	display: none
}

.product-notifications .notifications-list .yui-dt-message .yui-dt-last
	{
	display: block;
	border-top: 1px solid #CCC;
	border-right: 0
}

.product-notifications .notifications-list .full-screen .sticky-footer,
	.full-screen .sticky-push {
	height: 0
}

.notifications-panel .score li, #scoreLi {
	background-image:
		url(../../components/images/states/percent-gauges-sprite.jpg);
	margin: .2em .5em .5em;
	display: inline-block
}

.product-notifications-container .loading span.first-child button
{
	background: url(images/loading.gif) no-repeat 12px 4px;
	padding-left: 24px
}

.product-notifications-container span.warning {
	background-color: #f44336;
	border: medium none;
	border-radius: 3px;
	box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0
		rgba(0, 0, 0, 0.15);
	color: #fff !important;
	font-weight: bold !important;
	left: -11px;
	padding: 0 3px;
	position: relative;
	top: -16px;
	
}

.product-notifications-container .score span.first-child button
{
	background-image:
		url(../../components/images/states/percent-gauges-sprite-28.jpg);
	font-size: 8px;
	height: 28px;
	padding: 0;
	width: 28px
}

.product-notifications-container table {
	border-spacing: 10px 10px
}

.product-notifications-container .score-1 span.first-child button
{
	background-position: -1px 0
}

.product-notifications-container .score-2 span.first-child button
{
	background-position: -29px 0;
	animation: score 1s steps(1) 1 forwards
}

.product-notifications-container .score-3 span.first-child button
{
	background-position: -57px 0;
	animation: score 1s steps(2) 1 forwards
}

.product-notifications-container .score-4 span.first-child button
{
	background-position: -86px 0;
	animation: score 1s steps(3) 1 forwards
}

.product-notifications-container .score-5 span.first-child button
{
	background-position: -112px 0;
	animation: score 1s steps(4) 1 forwards
}

.product-notifications-container .score-6 span.first-child button
{
	background-position: -141px 0;
	animation: score 1s steps(5) 1 forwards
}

.product-notifications-container .score-7 span.first-child button
{
	background-position: -169px 0;
	animation: score 1s steps(6) 1 forwards
}

.product-notifications-container .score-8 span.first-child button
{
	background-position: -197px 0;
	animation: score 1s steps(7) 1 forwards
}

.product-notifications-container .score-9 span.first-child button
{
	background-position: -225px 0;
	animation: score 1s steps(8) 1 forwards
}

.product-notifications-container .score-10 span.first-child button
{
	background-position: -253px 0;
	animation: score 1s steps(9) 1 forwards
}

.product-notifications-container .score-11 span.first-child button
{
	background-position: -281px 0;
	animation: score 1s steps(10) 1 forwards
}

.product-notifications-container .score-12 span.first-child button
{
	background-position: -309px 0;
	animation: score 1s steps(11) 1 forwards
}

.product-notifications-container .score-13 span.first-child button
{
	background-position: -336px 0;
	animation: score 1s steps(12) 1 forwards
}

.product-notifications-container .score-14 span.first-child button
{
	background-position: -364px 0;
	animation: score 1s steps(13) 1 forwards
}

.product-notifications-container .score-15 span.first-child button
{
	background-position: -392px 0;
	animation: score 1s steps(14) 1 forwards
}

.product-notifications-container .score-16 span.first-child button
{
	background-position: -419px 0;
	animation: score 1s steps(15) 1 forwards
}

.product-notifications-container .score-17 span.first-child button
{
	background-position: -447px 0;
	animation: score 1s steps(16) 1 forwards
}
/* ... */

